--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "animated-header",
   "version": "1.0.0",
-  "description": "A fixed header that will animate its size on scroll. The inner elements will also adjust their size with a transition.",
+  "description": "A simple header class switch on scroll.",
   "license": "MIT",
   "main": "animated-header.min.js",
   "repository": {
@@ -9,9 +9,6 @@
     "url": "https://github.com/leowebguy/animated-header.git"
   },
   "authors": [
-    "botelho <http://tympanus.net/codrops>"
-  ],
-  "contributors": [
     "Leo Leoncio <leowebguy@gmail.com>"
   ],
   "bugs": {
